--- a/src/main/resources/templates/simple_form.html
+++ b/src/main/resources/templates/simple_form.html
@@ -5,7 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Simple Form</h1>
+
+<h1>Добавление товара в репозиторий</h1>
 
 <form method="get" th:action="@{'/products/product_add'}">
 
